--- a/a.html
+++ b/a.html
@@ -3,6 +3,6 @@
 <head>
 </head>
 <body>
-<a href="itms-services://?action=download-manifest&url=https://github.com/ephemeraddd/mc_download/blob/master/mc188_app.plist">真真</a>
+<a href="itms-services://?action=download-manifest&url=https://github.com/ephemeraddd/mc_download/master/mc188_app.plist">多多多多</a>
 </body>
 </html>
